syntax = "proto3";
package proto;

option go_package = "./proto";

import "common.proto";


message ScalingItemEffectProperties {
	// keys are the numeric values of proto.common.Stat
	map<int32, double> stats = 1;
}
  message ItemEffect {
	int32            buff_id         = 1;
	string buff_name = 6;
	int32            effect_duration_ms = 2;  // milliseconds
	// Keyed to itemlevelstate
	map<int32, ScalingItemEffectProperties> scaling_options        = 3;

	oneof effect {
	  ProcEffect  proc   = 4;
	  OnUseEffect on_use = 5;
	}
  }

  message ProcEffect {
	int32       icd_ms         = 1;  // internal cooldown in milliseconds
	oneof procRate {
		double proc_chance = 2;  // e.g. 0.20 = 20%
		double ppm = 3;
	}
  }

  message OnUseEffect {
	int32 cooldown_ms = 1;  // milliseconds between uses

	int32 category_id = 11;

	int32 category_cooldown_ms = 8;  // category cooldown in milliseconds
  }

message SpellEffect {
    int32 id = 1;
    int32 spell_id = 2;
    int32 index = 3;
    EffectType type = 4;
    double min_effect_size = 5;
	double effect_spread = 6;
	oneof misc_value0 {
		ResourceType resource_type = 7;
		SpellSchool school = 8;
		Stat stat = 9;
	}
}

enum EffectType {
	EffectTypeUnknown = 0;
	EffectTypeHeal = 10;
	EffectTypeResourceGain = 30;
}

enum ResourceType {
	ResourceTypeNone = 0;
	ResourceTypeMana = 1;
	ResourceTypeEnergy = 2;
	ResourceTypeRage = 3;
	ResourceTypeFocus = 4;
	ResourceTypeComboPoints = 5;
	ResourceTypeHealth = 6;
	ResourceTypeGenericResource = 7;
}
